Add Optifine.