@@ -6,7 +6,7 @@ public class IntegerCache
 
     public static Integer func_181756_a(int p_181756_0_)
     {
-        return p_181756_0_ > 0 && p_181756_0_ < field_181757_a.length ? field_181757_a[p_181756_0_] : Integer.valueOf(p_181756_0_);
+        return p_181756_0_ >= 0 && p_181756_0_ < field_181757_a.length ? field_181757_a[p_181756_0_] : new Integer(p_181756_0_);
     }
 
     static
